Add controller test