@@ -4,25 +4,33 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.udea.banco2026v.dto.CustomerDTO;
 import com.udea.banco2026v.service.CustomerService;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
+import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
+import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.List;
+import java.util.Arrays;
 
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.when;
+
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
+
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-@WebMvcTest(CustomerController.class)
-class CustomerControllerTest {
+@SpringBootTest
+@AutoConfigureMockMvc
+@ActiveProfiles("dev")
+public class CustomerControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
@@ -36,61 +44,77 @@ class CustomerControllerTest {
     @Test
     void testGetAllCustomers() throws Exception {
 
-        CustomerDTO dto = new CustomerDTO();
-        dto.setId(1L);
-        dto.setFirstName("Ana");
+        CustomerDTO customer = new CustomerDTO();
+        customer.setId(1L);
+        customer.setFirstName("Juan");
+        customer.setLastName("Perez");
+        customer.setAccountNumber("123");
+        customer.setBalance(5000.0);
 
-        Mockito.when(customerService.getAllCustomers())
-                .thenReturn(List.of(dto));
+        when(customerService.getAllCustomers())
+                .thenReturn(Arrays.asList(customer));
 
         mockMvc.perform(get("/api/customers"))
-                .andExpect(status().isOk());
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$[0].firstName").value("Juan"));
     }
 
     @Test
     void testGetCustomerById() throws Exception {
 
-        CustomerDTO dto = new CustomerDTO();
-        dto.setId(1L);
+        CustomerDTO customer = new CustomerDTO();
+        customer.setId(1L);
+        customer.setFirstName("Juan");
+        customer.setLastName("Perez");
+        customer.setAccountNumber("123");
+        customer.setBalance(5000.0);
 
-        Mockito.when(customerService.getCustomerById(1L))
-                .thenReturn(dto);
+        when(customerService.getCustomerById(1L))
+                .thenReturn(customer);
 
         mockMvc.perform(get("/api/customers/1"))
-                .andExpect(status().isOk());
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.firstName").value("Juan"));
     }
 
     @Test
     void testCreateCustomer() throws Exception {
 
-        CustomerDTO dto = new CustomerDTO();
-        dto.setFirstName("Ana");
-        dto.setLastName("Lopez");
-        dto.setAccountNumber("123");
-        dto.setBalance(5000.0);
+        CustomerDTO customer = new CustomerDTO();
+        customer.setId(1L);
+        customer.setFirstName("Juan");
+        customer.setLastName("Perez");
+        customer.setAccountNumber("123");
+        customer.setBalance(5000.0);
 
-        Mockito.when(customerService.createCustomer(any(CustomerDTO.class)))
-                .thenReturn(dto);
+        when(customerService.createCustomer(any(CustomerDTO.class)))
+                .thenReturn(customer);
 
         mockMvc.perform(post("/api/customers")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(dto)))
-                .andExpect(status().isOk());
+                        .content(objectMapper.writeValueAsString(customer)))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.firstName").value("Juan"));
     }
 
     @Test
     void testUpdateCustomer() throws Exception {
 
-        CustomerDTO dto = new CustomerDTO();
-        dto.setFirstName("Maria");
+        CustomerDTO customer = new CustomerDTO();
+        customer.setId(1L);
+        customer.setFirstName("Carlos");
+        customer.setLastName("Lopez");
+        customer.setAccountNumber("456");
+        customer.setBalance(8000.0);
 
-        Mockito.when(customerService.updateCustomer(Mockito.eq(1L), any(CustomerDTO.class)))
-                .thenReturn(dto);
+        when(customerService.updateCustomer(anyLong(), any(CustomerDTO.class)))
+                .thenReturn(customer);
 
         mockMvc.perform(put("/api/customers/1")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(dto)))
-                .andExpect(status().isOk());
+                        .content(objectMapper.writeValueAsString(customer)))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.firstName").value("Carlos"));
     }
 
     @Test
